[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.29.0"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.8", features = ["v4"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4.41"
regex = "1.11.1"
rand = "0.9.1"
