[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
common = { path = "../common" }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
toml = "0.8"
regex = "1.10"
