[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
